src/App.css
#root {
	position: relative;
	min-height: 100vh;
	text-align: center;
	font-family: "Inter", sans-serif;
}

@media (min-width: 501px) {

	div.icon-container,
	nav.toggled-flex-container {
		display: none;
	}
}

@media (max-width: 500px) {
	nav.flex-container {
		display: none;
	}

	@keyframes page-slide-in {
		0% {
			transform: translateY(-68px)
		}

		100% {
			transform: translateY(0);
		}
	}

	@keyframes page-slide-out {
		0% {
			transform: translateY(0);
		}

		100% {
			transform: translateY(-68px);
		}
	}

	.page-slide-in {
		animation: page-slide-in 0.6s forwards;
	}

	.page-slide-out {
		animation: page-slide-out 0.6s forwards;
	}
}

@keyframes slide-in {
	0% {
		transform: scaleY(0);
	}

	100% {
		transform: scaleY(1);
	}
}

@keyframes slide-out {
	0% {
		transform: scaleY(1);
	}

	100% {
		transform: scaleY(0);
	}
}

div.slide-in {
	animation: slide-in 0.6s forwards;
	transform-origin: top;
}

div.slide-out {
	transform-origin: top;
	animation: slide-out 0.6s forwards;
}

.flex-container,
.toggled-flex-container {
	display: flex;
	justify-content: space-around;
	align-items: center;
	margin-bottom: 1.2em;
	padding: 0.9em 0.4em;
	background-color: hsl(343, 74%, 23%, 5%);
}

.icon-container {
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 10px;
	border: 2px solid #660f27;
	height: 2.4em;
	width: 2.4em;
	transition: 0.3s;

	&>* {
		height: 100%;
		width: 100%;
		padding: 7px;
		fill: #660f27;
	}
}

.icon-container:active {
	transform: scale(0.9);
}

.icon {
	background: transparent;
	color: #660f27;
	cursor: pointer;
}

.nav-link {
  text-decoration: none;
  background: none;
  color: #660f27;
  cursor: pointer;
  transition: 0.3s;
}

.nav-link:hover {
  text-decoration: 1px underline;
  text-underline-offset: 3px;
}

/* Login // Register // LoginSuccess */

.auth-header {
	margin: 1.2em 0 0;
	color: #660f27;
}

.auth-form {
	display: flex;
	flex-direction: column;
	margin: auto;
	color: #660f27;
	max-width: 400px;
}

.input-wrapper {
	display: flex;
	flex-direction: column;
	margin-top: 1.4em;
}

.input-label {
	margin-bottom: 0.9em;
}

.input-field {
	margin: 0 5%;
	border: none;
	border-radius: 50px;
	padding: 0 1em;
	line-height: 3em;
	box-shadow: inset 0 0 4px #222222;
	transition: 0.3s;
	font-size: 0.9rem;
}

.input-field:focus {
	line-height: 3.5em;
}

.form-btns {
	display: flex;
}

.styled-btn {
	margin: 2.5em auto;
	border: none;
	border-radius: 50px;
	padding: 0.6em 1.4em;
	font-size: 1rem;
	box-shadow: 0 0 2px black;
	transition: 0.3s;
}

.auth-btn {
	background: #734060;
	color: white;
}

.back-btn {
	background: #404673;
	color: white;
}

.auth-btn:disabled, .back-btn:disabled {
	background: white;
	color: gray;
}

.styled-btn:active {
	transform: scale(0.9);
}

.login-success {
	display: flex;
	flex-direction: column;
}

.login-success-text {
	margin: 2em auto;
}

.username-text {
	margin-top: 0.2em;
	padding: 0.6em 0;
	background-color: hsl(343, 74%, 23%, 5%);
	color: #660f27;
	font-size: 1.2rem;
	font-weight: 600;
}

.error-section > p {
	margin: 2em 5% 0;
	border: 1px solid hsl(343, 74%, 23%, 50%);
	border-radius: 2px;
	background: hsl(343, 74%, 23%, 5%);
	line-height: 2.2rem;
	color: #921538;
}

